:art: 新功能